# internal/dto/profile_dto.go
@@ -1,0 +1,5 @@
+package dto
+
+type ProfileLoginResponseDTO struct {
+	Message string `json:"message"`
+}
