# internal/model/profile_model.go
@@ -1,5 +1,0 @@
-package model
-
-type ProfileLoginResponse struct {
-	Message string `json:"message"`
-}
