# internal/transport/http/medal_handler.go
@@ -1,7 +1,7 @@
 package http
 
 import (
-	"for9may/internal/model"
+	"for9may/internal/dto"
 	"for9may/internal/service"
 	"for9may/pkg/logger"
 	"for9may/resources/web"
@@ -20,12 +20,12 @@ func NewMedalHandler(medalService *service.MedalService) *MedalHandler {
 // CreateMedal
 // @Tags Medal
 // @Router /medal/create [post]
-// @Param medal body model.CreateMedalModel true "Create medal"
+// @Param medal body dto.CreateMedalDTO true "Create medal"
 // Success 201
 // Failure 422
 // Failure 500
 func (m *MedalHandler) CreateMedal(c *gin.Context) {
-	var medal model.CreateMedalModel
+	var medal dto.CreateMedalDTO
 	if err := c.ShouldBindJSON(&medal); err != nil {
 		c.AbortWithStatusJSON(http.StatusUnprocessableEntity, web.ValidationError{Message: err.Error()})
 		return
@@ -42,7 +42,7 @@ func (m *MedalHandler) CreateMedal(c *gin.Context) {
 // GetMedals
 // @Tags Medal
 // @router /medal [get]
-// Success 200 {array} []model.MedalModel
+// Success 200 {array} []dto.MedalDTO
 // Failure 422 web.ValidationError
 // Failure 500 web.InternalServerError
 func (m *MedalHandler) GetMedals(c *gin.Context) {
